impliment other views + fading
- implement other non-game views (TITLE, WIN, LOSE)
- implement CSS fading system between views
- add reference images in `/devref`

--- a/game.css
+++ b/game.css
@@ -1,10 +1,17 @@
-#game {
-    width: 90vw;
+.game {
+    position: fixed;
+    z-index: 2;
+    width: 97.5vw;
     max-height: 100vh;
     background-color: red;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.game.show {
+    opacity: 1.0;
+    pointer-events: all;
 }
 
 .infoBar {
