--- a/game.css
+++ b/game.css
@@ -3,7 +3,6 @@
     z-index: 2;
     width: 97.5vw;
     max-height: 100vh;
-    background-color: red;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,7 +16,6 @@
 .infoBar {
     width: 100%;
     height: 10vh;
-    background-color: green;
     justify-content: space-between;
     align-items: center;
     display: flex;
@@ -25,13 +23,11 @@
 }
 
 .infoBar :nth-child(1) {
-    background-color: orange;
     text-align: left;
     justify-content: flex-start;
 }
 
 .infoBar :nth-child(2) {
-    background-color: orange;
     text-align: right;
     justify-content: flex-end;
 }
@@ -127,15 +123,14 @@
     justify-content: space-evenly;
     align-items: center;
 
-    background-color: #00ffffa0;
 }
 
 #activeBars * {
     width: 75%;
     height: 10vh;
-    background-color: #ff000060;
     text-align: center;
     font-size: 4vmin;
+    background-color: rgba(100,100,100,0.5);
 }
 
 #notify {
