basic complete implimention
all game logic provided by monolith `game.js`, declared as a global object in the html. this object handles all the intervals and timeouts needed to make the program function. all of the features from the original game are now added and appear to be working, although some bugs likely exist.

documentation could also use some work

--- a/css/game.css
+++ b/css/game.css
@@ -53,12 +53,11 @@
 }
 
 #notify {
-    color: black;
+    color: whitesmoke;
     pointer-events: none;
 }
 
 #prompt {
-    color: blue;
     pointer-events: none;
 }
 
