--- a/css/fonts.css
+++ b/css/fonts.css
@@ -9,7 +9,7 @@
 @font-face 
 {
     font-family: unifont;
-    src: url('../assets/font/Unifont_Bottom.woff') format('woff'),
+    src: url('../assets/font/Unifont_Latin.woff') format('woff'),
 }
 
 body * {
@@ -18,4 +18,5 @@ body * {
 
 #binaryBG {
     font-family: unifont;
+    font-kerning: none;
 }
