minify code and add new buttons
- all `/code/src/*` minified to `/code/exe/*`
- added "unmute music" button to title screen to allow for music to start early
- Top Right infoBar is now a button to abort to the main menu early

--- a/css/game.css
+++ b/css/game.css
@@ -22,6 +22,10 @@
     flex-direction: row;
 }
 
+.infoBar * {
+    font-size: 4vmin;
+}
+
 .infoBar :nth-child(1) {
     text-align: left;
     justify-content: flex-start;
@@ -30,6 +34,12 @@
 .infoBar :nth-child(2) {
     text-align: right;
     justify-content: flex-end;
+    align-self: center;
+}
+
+.infoBar button {
+    background-color: grey;
+    color: whitesmoke;
 }
 
 #activeBars
